fix: update devcontainer image and add TOFU config; refine library dependencies