@@ -1,6 +1,5 @@
 import sbt._
 import Keys._
-import Tests._
 
 inThisBuild(
   Seq(
@@ -17,7 +16,6 @@ inThisBuild(
       "--add-opens=java.base/java.net=ALL-UNNAMED",
       "--add-opens=java.base/java.lang=ALL-UNNAMED",
       "--add-opens=java.base/java.util=ALL-UNNAMED",
-      "--add-opens=java.base/java.util=ALL-UNNAMED",
       "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
       "--add-opens=java.base/sun.util.calendar=ALL-UNNAMED"
     )
@@ -30,15 +28,17 @@ lazy val lakehouse = project
   .settings(
     name := "lakehouse",
     assembly / assemblyJarName := "lakehouse.jar",
-    libraryDependencies ++= Seq(
+    useDnaBom("1.1.2")(
       // DBR Runtime
-      "ct.dna" %% "dbx-runtime" % "17.3.0" % Provided,
+      "dbx-runtime" % Provided,
       // Application Libs
-      "ct.dna" %% "common-utils" % "1.16.1",
-      "ct.dna" %% "dataplatform-core" % "1.15.2",
-      "ct.dna" %% "lakehouse-core" % "2.0.3",
+      "common-utils",
+      "dataplatform-core",
+      "lakehouse-core",
       // Test only
-      "ct.dna" %% "local-spark-runtime" % "17.3.0" % Test,
+      "local-spark-runtime" % Test
+    ),
+    libraryDependencies ++= Seq(
       "org.scalatest" %% "scalatest" % "3.2.19" % Test
     )
   )
@@ -51,10 +51,12 @@ lazy val cicd = project
     name := "cicd",
     run / fork := true,
     assembly / skip := true,
+    useDnaBom("1.1.2")(
+      "deploy-utils",
+      "lakehouse-modelbuilder",
+      "local-spark-runtime"
+    ),
     libraryDependencies ++= Seq(
-      "ct.dna" %% "deploy-utils" % "1.13.1",
-      "ct.dna" %% "lakehouse-modelbuilder" % "1.2.1",
-      "ct.dna" %% "local-spark-runtime" % "17.3.0",
       "org.scalatest" %% "scalatest" % "3.2.19" % Test
     )
   )
